--- a/index.css
+++ b/index.css
@@ -17,8 +17,8 @@ main {
   justify-content: center;
   align-items: center;
   background-color: white;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 10vh;
 }
 
 footer {
